feat: 급여 - 바뀐 정류장으로 급여시간 계산
html에서 member_list로 목록 만들던 부분 datas로 변경

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -695,8 +695,8 @@
     const STATION_LIST_URL = '{% url "dispatch:regularly_station_list" %}'
     
     const STATION_TYPES = {
-        '출근' : ['차고지(내부)', '차고지(외부)', '사전준비시간', '첫 정류장 대기장소', '정류장', '사업장', '대기장소(내부)', '대기장소(외부)', '뒷 정리 완료'],
-        '퇴근' : ['대기장소(내부)', '대기장소(외부)', '사전준비시간', '사업장 대기장소', '사업장', '정류장', '마지막 정류장', '차고지(내부)', '차고지(외부)', '뒷 정리 완료'],
+        '출근' : ['차고지(내부)', '차고지(외부)', '사전준비시간', '첫 정류장 대기장소', '정류장', '사업장', '대기장소(내부)', '대기장소(외부)'],
+        '퇴근' : ['대기장소(내부)', '대기장소(외부)', '사전준비시간', '사업장 대기장소', '사업장', '정류장', '마지막 정류장', '차고지(내부)', '차고지(외부)'],
     }
     const groupCreateChangeForm = document.querySelector(".groupCreate")
     
