--- a/static/css/salary/daily_status.css
+++ b/static/css/salary/daily_status.css
@@ -34,6 +34,10 @@
     margin-right: 2rem;
 }
 
+.tableScrollBox div {
+    box-sizing: border-box;
+}
+
 .searchFormSearchBtn{
     height: 2.6rem;
     margin-left: 2rem;
@@ -104,14 +108,14 @@
 
 
 .theadTh:nth-child(1),.tbodyDivTd:nth-child(1){width: 3%;}
-.theadTh:nth-child(2),.tbodyDivTd:nth-child(2){width: 4%;}
-.theadTh:nth-child(3),.tbodyDivTd:nth-child(3){width: 5%;}
-.theadTh:nth-child(4),.tbodyDivTd:nth-child(4){width: 5%;}
-.theadTh:nth-child(5),.tbodyDivTd:nth-child(5){width: 82%;}
-.theadTh:nth-child(6),.tbodyDivTd:nth-child(6){width: 6%;}
+.theadTh:nth-child(2),.tbodyDivTd:nth-child(2){width: 3%;}
+.theadTh:nth-child(3),.tbodyDivTd:nth-child(3){width: 3%;}
+.theadTh:nth-child(4),.tbodyDivTd:nth-child(4){width: 3%;}
+.theadTh:nth-child(5),.tbodyDivTd:nth-child(5){width: 88%;}
+/* .theadTh:nth-child(6),.tbodyDivTd:nth-child(6){width: 6%;} */
 
 .theadThTh {
-    width: 7.5%;
+    width: 6%;
     height: 100%;
 }
 
@@ -122,7 +126,7 @@
 
 .theadThDetails{
     flex-direction: column;
-    width: 36%;
+    width: 28%;
 }
 
 .theadThContent{
@@ -156,7 +160,7 @@
 }
 
 .tbodyDivTdTdTimeValue{
-    width: 7.5%;
+    width:6%;
 }
 
 .tbodyDivTdTdTime > *,
@@ -171,7 +175,7 @@
 
 
 .none{
-    width: 59.5%
+    width: 68.5%;
 }
 
 
@@ -198,7 +202,7 @@
 }
 
 .sumTime{
-    width: 7.2%;
+    width: 5.6%;
 }
 
 .flex > *, .personalFlex {
@@ -206,3 +210,4 @@
     justify-content: center;
     align-items: center;
 }
+
