feat: 급여 명세서 시급 계산 버전 추가

--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -403,7 +403,7 @@
             }
         };
         if (checkDriver !== 0) {
-            targetLink = `{% url "HR:salary_detail" %}?date=${month.value}&driver=${checkerArr}`
+            targetLink = `{% url "HR:salary_detail_hourly" %}?date=${month.value}&driver=${checkerArr}`
             window.open(targetLink, "노선별A4", "width=1200, height=800")
         } else {
             alert("기사를 선택해 주세요.")
