현재 : 수칙관리, 조직도 원탁 : 차량관리 정비내역삭제기능, 정비내역 총정비금액, 총튜닝금액 합산 추가

--- a/rules/templates/rules/driverrules.html
+++ b/rules/templates/rules/driverrules.html
@@ -24,7 +24,7 @@
 <div id="printableArea" class="container">
         <div class="MainHeaderTitle"> 승무원 수칙 </div>
         <div class="MainGoalsTitle"> 목표: 안전운행, 차량관리, 수익창출</div>
-    <div class="Mainapproval">
+ <div class="Mainapproval">
     
     <section class="rule-section">
         <div class="approvalSubSection">제 1장 출근 및 점호</div>
@@ -249,18 +249,18 @@
             <tbody>
                 <tr>
                     <td>만근수당</td>
-                    <td>20만원</td>
+                    <td>10만원</td>
                     <td>연차, 휴가계 제외 결근 시 20만원 감봉. * 20분 이상 지각 시 결근으로 처리</td>
                 </tr>
                 <tr>
                     <td>성실수당</td>
-                    <td>20만원</td>
+                    <td>30만원</td>
                     <td>지각할 때마다 차례로 5만원, 5만원, 10만원 감봉. * 결행 시 20만원 전체 감봉.</td>
                 </tr>
                 <tr>
                     <td>무사고 수당</td>
                     <td>20만원</td>
-                    <td>가해 사고일 경우, 자차 사고일 경우 20만원 감봉.</td>
+                    <td>피해금액(추정) 최종율이 달라지면 가감정산 (100미만 -5, 200미만 -10, 300미만 -15, 300이상 -20), 징계처분은 별도</td>
                 </tr>
                 <tr>
                     <td>복리후생</td>
@@ -421,7 +421,7 @@
         </table>
     </section>
 
-</div>
+ </div>
 </div>
 {% endblock %}
 
