조직도 크기 조절

--- a/rules/templates/rules/organizationchart.html
+++ b/rules/templates/rules/organizationchart.html
@@ -12,6 +12,6 @@
 
 {% block content %}
 <div class="org-chart">
-  <img src="/static/images/회사조직도.png">
+  <img src="{% static 'images/회사조직도.png' %}">
 </div>
 {% endblock %}
