feat: salary service 식대 계산 방식 수정, 급여2 식대 팝업 추가

--- a/humanresource/templates/HR/salary_detail_hourly.html
+++ b/humanresource/templates/HR/salary_detail_hourly.html
@@ -288,7 +288,7 @@
                     </tr>
                     <tr class="allMountTable12Line">
                         <td class="titleTd">식대</td>
-                        <td class="printComma">{{salary_data.welfare_meal_allowance}}</td>
+                        <td class="printComma">{{salary_data.meal}}</td>
                         <td class="titleTd">유류비</td>
                         <td class="printComma">{{salary_data.welfare_fuel_allowance}}</td>
                     </tr>
