--- a/salary/templates/salary/table3.html
+++ b/salary/templates/salary/table3.html
@@ -287,7 +287,7 @@
                         <div class="addCommaToInnerText">{{current_data.statutory_allowance}}</div>
                     </div>
                     <div class="tbodyInsurance" style="display: flex;">
-                        <div class="addCommaToInnerText">{{current_data.welfare_meal_allowance}}</div>
+                        <div class="addCommaToInnerText">{{current_data.meal}}</div>
                         <div class="addCommaToInnerText">{{current_data.welfare_fuel_allowance}}</div>
                     </div>
                     <div class="tbodySum addCommaToInnerText">{{current_data.sum_ordinary_salary_and_statutory_allowance}}</div>
