--- a/static/css/humanresource/salaryNew.css
+++ b/static/css/humanresource/salaryNew.css
@@ -70,11 +70,12 @@
 
 .salaryContainer td:nth-child(16),
 .salaryContainer td:nth-child(17),
-.salaryContainer td:nth-child(18) {
+.salaryContainer td:nth-child(18),
+.salaryContainer td:nth-child(19) {
     width: 5%;
 }
 
-.salaryContainer td:nth-child(19) {
+.salaryContainer td:nth-child(20) {
     width: 6%;
 }
 .salaryPopup {
@@ -204,7 +205,8 @@
 }
 
 .addSalaryDeleteBtn,
-.addSalaryCloseBtn{
+.addSalaryCloseBtn,
+.closeBtn {
     background-color: #444;
 }
 
@@ -254,9 +256,8 @@
     margin-top: 2rem;
 }
 
-.deductionTableScroll,
-.weeklyDeductionTableScroll {
-    height: 14.4rem;
+.mealTableScroll {
+    height: 30.4rem;
 }
 
 .popupArticleBoxTable td:nth-child(1){
@@ -283,6 +284,7 @@
     box-sizing: border-box;
 }
 
+.popupTotalTable,
 .deductionTotalTable,
 .weeklyDeductionTotalTable {
     width: calc(100% - 0.6rem);
@@ -291,6 +293,7 @@
     font-size: 1.4rem;
 }
 
+.popupTotalTable td:nth-child(1),
 .deductionTotalTable td:nth-child(1),
 .weeklyDeductionTotalTable td:nth-child(1){
     width: 6%;
@@ -298,6 +301,7 @@
     border-right: 0.1rem solid white;
 }
 
+.popupTotalTable td:nth-child(2),
 .deductionTotalTable td:nth-child(2),
 .weeklyDeductionTotalTable td:nth-child(2){
     width: 18%;
