--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -120,7 +120,7 @@
                     <td class="checkTd table-list_body-tr_td">
                         <input type="text" class="amountInput length100 welfareFuelAllowance" value="{{salary.welfare_fuel_allowance}}">
                     </td>
-                    <td class="table-list_body-tr_td salaryAdditional addComma salaryPopup mealTd">{{meal_list|index:forloop.counter0}}</td>
+                    <td class="table-list_body-tr_td addComma salaryPopup welfareMealAllowance mealTd">{{meal_list|index:forloop.counter0}}</td>
                     <td class="table-list_body-tr_td salaryAdditional addComma salaryPopup additionalTd">{{salary.additional}}</td>
                     <td class="table-list_body-tr_td salaryDeduction addComma salaryPopup deductionTd">{{salary.deduction}}</td>
                     <td class="table-list_body-tr_td salaryWeeklyDeduction addComma salaryPopup weeklyDeductionTd {% if salary.weekly_holiday_allowance_deduction != '0' %}backgroundGray{% endif %}">{{weekly_holiday_allowance|index:forloop.counter0}}</td>
@@ -150,8 +150,8 @@
                 <td class="table-list_body-tr_td totalFullAttendanceAllowance"></td>
                 <td class="table-list_body-tr_td totalDiligenceAllowance"></td>
                 <td class="table-list_body-tr_td totalAccidentFreeAllowance"></td>
-                <td class="table-list_body-tr_td totalWelfareMealAllowance"></td>
                 <td class="table-list_body-tr_td totalWelfareFuelAllowance"></td>
+                <td class="table-list_body-tr_td totalWelfareMealAllowance"></td>
                 <td class="table-list_body-tr_td totalAdditional"></td>
                 <td class="table-list_body-tr_td totalDeduction"></td>
                 <td class="table-list_body-tr_td totalWeeklyDeduction"></td>
