--- a/static/css/vehicle/accident.css
+++ b/static/css/vehicle/accident.css
@@ -204,6 +204,12 @@
     border-radius: 17px;
 }
 
+.accident-detail-button {
+    border: none;
+    background-color: white;
+    color: #0069D9;
+}
+
 /* MARK: Paging */
 .paging{
     text-align: center;
@@ -781,4 +787,26 @@
     background-color: white;
     border: 2px solid #c6c6c6;
     border-radius: 5px;
+}
+
+/* 설아 */
+/* MARK: Estimate Pop Up */
+.estimate-pop-up-bg-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    position: absolute;
+    top:0;
+    left: 0;
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.estimate-pop-up-container {
+    width: 80%;
+    height: 70%;
+    background-color: white;
 }
