--- a/humanresource/templates/HR/salary_new.html
+++ b/humanresource/templates/HR/salary_new.html
@@ -469,8 +469,8 @@
 
 
     function loadPrevMonthlyBase() {
-        if (confirm('저번달 기본급, 근속수당, 연차수당, 직급수당, 식대를 불러오시겠습니까?')) {
-            loadForm.action = "{% url 'HR:salary_load' %}"
+        if (confirm('이전달 근속수당, 연차수당, 만근수당, 성실수당, 무사고수당을 불러오시겠습니까?')) {
+            loadForm.action = "{% url 'HR:salary_load_new' %}"
             loadForm.submit()
         }
     }
