after merge commit

--- a/educational/templates/education/educational.html
+++ b/educational/templates/education/educational.html
@@ -73,20 +73,27 @@
 
                                         <tr>
                                             <td>2</td>
-                                            <td colspan="2" onclick="openBoth('joinDocuments')">입사 시 등록 서류</td>
+                                            <td colspan="2" onclick="openBoth('sexualEducation')">성희롱 예방교육</td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
 
                                         <tr>
                                             <td>3</td>
-                                            <td colspan="2" onclick="openBoth('kindTraining')">친절 교육</td>
+                                            <td colspan="2" onclick="openBoth('joinDocuments')">입사 시 등록 서류</td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
 
                                         <tr>
                                             <td>4</td>
+                                            <td colspan="2" onclick="openBoth('kindTraining')">친절 교육</td>
+                                            <td>관리자</td>
+                                            <td>2022.09.15</td>
+                                        </tr>
+
+                                        <tr>
+                                            <td>5</td>
                                             <td colspan="2" onclick="openBoth('managerRules')">현장관리자 수칙</td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
@@ -297,6 +304,29 @@
                         <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 9.png' %}" class="educationImg1">
                         <div class="blank"></div>
                         <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 10.png' %}" class="educationImg1">
+                    </div>
+                </div>
+
+                <div class="educationBlock" id="sexualEducation"> <!--성희롱 예방교육-->
+                    <div class="educationDetailImgRow">
+                        <img src="{% static 'images/educational/기본교육/성희롱/1.png' %}" class="educationImg1">
+                        <div class="blank"></div>
+                        <img src="{% static 'images/educational/기본교육/성희롱/2.png' %}" class="educationImg1">
+                    </div>
+                    <div class="educationDetailImgRow">
+                        <img src="{% static 'images/educational/기본교육/성희롱/3.png' %}" class="educationImg1">
+                        <div class="blank"></div>
+                        <img src="{% static 'images/educational/기본교육/성희롱/4.png' %}" class="educationImg1">
+                    </div>
+                    <div class="educationDetailImgRow">
+                        <img src="{% static 'images/educational/기본교육/성희롱/5.png' %}" class="educationImg1">
+                        <div class="blank"></div>
+                        <img src="{% static 'images/educational/기본교육/성희롱/6.png' %}" class="educationImg1">
+                    </div>
+                    <div class="educationDetailImgRow">
+                        <img src="{% static 'images/educational/기본교육/성희롱/7.png' %}" class="educationImg1">
+                        <div class="blank"></div>
+                        <img src="{% static 'images/educational/기본교육/성희롱/8.png' %}" class="educationImg1">
                     </div>
                 </div>
             
